Update for COH on by default